tests/errors/macro/macro_unclosed_string/in_include.c
#include "qw	// newline в константе

int main()
{
	return 0;
}
